<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ActivityPages.RegistrationActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="743dp"
                tools:layout_editor_absoluteX="-4dp"
                tools:layout_editor_absoluteY="210dp">

                <TextView
                    android:id="@+id/firstNameText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="64dp"
                    android:text="@string/username"
                    android:textColor="@color/colorSecondary"
                    app:layout_constraintStart_toStartOf="@+id/firstName"
                    app:layout_constraintTop_toBottomOf="@+id/rent_A_Car" />

                <EditText
                    android:id="@+id/firstName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginRight="32dp"
                    android:backgroundTint="@color/colorSecondary"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/firstNameText" />

                <TextView
                    android:id="@+id/middleNameText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/login_username"
                    android:textColor="@color/colorSecondary"
                    app:layout_constraintStart_toStartOf="@+id/firstNameText"
                    app:layout_constraintTop_toBottomOf="@+id/firstName" />

                <EditText
                    android:id="@+id/middleName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorSecondary"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="@+id/firstName"
                    app:layout_constraintStart_toStartOf="@+id/firstName"
                    app:layout_constraintTop_toBottomOf="@+id/middleNameText" />

                <TextView
                    android:id="@+id/passwordText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="密码"
                    android:textColor="@color/colorSecondary"
                    app:layout_constraintStart_toStartOf="@+id/middleName"
                    app:layout_constraintTop_toBottomOf="@+id/middleName" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorSecondary"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="@+id/middleName"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/middleName"
                    app:layout_constraintTop_toBottomOf="@+id/passwordText" />

                <TextView
                    android:id="@+id/confirmPasswordText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="确认密码"
                    android:textColor="@color/colorSecondary"
                    app:layout_constraintStart_toStartOf="@+id/passwordText"
                    app:layout_constraintTop_toBottomOf="@+id/password" />

                <EditText
                    android:id="@+id/confirmPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorSecondary"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="@+id/password"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/password"
                    app:layout_constraintTop_toBottomOf="@+id/confirmPasswordText" />

                <Button
                    android:id="@+id/register"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:background="@drawable/round_button"
                    android:text="Register"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    app:fontFamily="@font/roboto_medium"
                    app:layout_constraintEnd_toEndOf="@+id/confirmPassword"
                    app:layout_constraintStart_toStartOf="@+id/confirmPassword"
                    app:layout_constraintTop_toBottomOf="@+id/confirmPassword" />

                <TextView
                    android:id="@+id/a_member"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="48dp"
                    android:text="Already a member?"
                    android:textColor="@android:color/white"
                    app:fontFamily="@font/roboto"
                    app:layout_constraintStart_toStartOf="@+id/register"
                    app:layout_constraintTop_toBottomOf="@+id/register" />

                <TextView
                    android:id="@+id/registration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="128dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/register"
                    android:textColor="@color/colorSecondary"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:fontFamily="@font/nunito"
                    app:layout_constraintEnd_toEndOf="@+id/rent_A_Car"
                    app:layout_constraintHorizontal_bias="0.536"
                    app:layout_constraintStart_toStartOf="@+id/rent_A_Car"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/rent_A_Car"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:text="Rent-A-Car"
                    android:textColor="@color/colorSecondary"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    app:fontFamily="@font/nunito_black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.497"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/registration" />

                <TextView
                    android:id="@+id/login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:text="Login"
                    android:textColor="@color/colorSecondary"
                    app:fontFamily="@font/roboto_bold"
                    app:layout_constraintBottom_toBottomOf="@+id/a_member"
                    app:layout_constraintStart_toEndOf="@+id/a_member"
                    app:layout_constraintTop_toTopOf="@+id/a_member"
                    app:layout_constraintVertical_bias="0.0" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout >